--- a/locales/ar/filters.json
+++ b/locales/ar/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "الفلتر يتكون من عدة فلاتر أخرى (مرشح قاعد ادجوارد وفلتر الوسائط الاجتماعية وفلتر حماية التتبع وفلتر إعلانات الجوال و القائمة السهلة و الخصوصية السهلة) وتبسيطه على وجه التحديد ليكون متوافقًا بشكل أفضل مع حظر الإعلانات على مستوى دنس"
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway قائمة الحظر الافتراضية",
+		"hostlist.2.description": "AdAway هو مانع إعلانات مفتوح المصدر لنظام Android باستخدام ملفات الـ Hosts."
 	},
 	{
-		"hostlist.3.name": "",
-		"hostlist.3.description": ""
+		"hostlist.3.name": "Peter Lowe's Blocklist",
+		"hostlist.3.description": "الحظر باستخدام خادم الإعلانات وتتبع أسماء خوادم الـ hostnames."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock's List",
+		"hostlist.4.description": "يحظر بعض الفخاخ المنبثقة ، ويمنع تتبع المستخدم ، ويمنع معظم الإعلانات التجارية."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "يحظر الإعلانات / المتعقبات ويعطي الأولوية للوظائف على المنع."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
+		"hostlist.23.description": "منع التجسس والتعقب على ويندوز."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
+		"hostlist.6.description": "مثلما توجد الآن قوائم لـ AdGuard Home و Pi-hole لمنع الإعلانات على أجهزة التلفزيون الذكية ، فإليك محاولة مني لفعل الشيء نفسه لوحدات تحكم ألعاب الفيديو باستخدام AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "هذه قائمة حظر لمنع أجهزة التلفزيون الذكية من إرسال البيانات الوصفية إلى المنزل ، في بعض الأحيان مع ميزة إضافية تتمثل في حظر إعلانات الواجهة للتطبيقات وخدمات الأفلام."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "فلاتر Nandelion Sprout's Nordic (لـ AdGuard Home ، و AdGuard لتصفية DNS لنظام اندرويد / ويندوز)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polish filters for Pi hole",
+		"hostlist.14.description": "Polish filters for Pi hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "فلتر بلوك للإعلانات خاصة على المواقع الكورية."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "قائمة فلاتر Adblock للفيتنامية."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "يهدف إلى التخلص من الإعلانات والتتبع والخداع والبرامج الضارة على مواقع الويب السويدية (في الغالب)."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "ملف المضيفين المؤقت للمواقع الإيطالية التي تم إنشاؤها من EasyList Italy و ADB X Files."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
+		"hostlist.19.description": "قائمة بالمضيفين غير المرغوب فيهم المصنفين."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
+		"hostlist.20.description": "هذه قائمة لحظر المجالات غير المرغوب فيها التي تعرض الإعلانات على مواقع الويب المقدونية."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "ملتزمون بكونهم أعلى قائمة تصفية للإعلانات بمعدل إصابة في المنطقة الصينية ، مما يحقق حظرًا دقيقًا للإعلانات وحماية الخصوصية."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo هو عامل تصفية إضافي يكمل EasyList لمنع الإعلانات المزعجة على المواقع باللغتين الإندونيسية والماليزية."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "قائمة حظر لحماية المستخدمين من المواقع غير الموثوق بها."
 	},
 	{
-		"hostlist.11.name": "",
-		"hostlist.11.description": ""
+		"hostlist.11.name": "Online Malicious URL Blocklist",
+		"hostlist.11.description": "قائمة حظر لمواقع الويب الضارة التي يتم استخدامها لتوزيع البرامج الضارة ، استنادًا إلى تفريغ قاعدة بيانات Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "قائمة مكافحة البرامج الضارة في Dandelion Sprout (لـ AdGuard Home ، و AdGuard لتصفية DNS لنظام اندرويد / ويندوز)."
 	},
 	{
-		"hostlist.8.name": "",
-		"hostlist.8.description": ""
+		"hostlist.8.name": "NoCoin Filter List",
+		"hostlist.8.description": "هذه قائمة حظر الإعلانات لمنع تعدين التشفير المستند إلى المتصفح."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "قائمة بمواقع الويب التي تم اختراقها باستخدام برامج ضارة أو برامج الفدية أو أحصنة طروادة."
 	}
 ]
