--- a/locales/ar/tags.json
+++ b/locales/ar/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "القوائم التي تمنع التتبع والإعلان على معظم الأجهزة."
 	},
 	{
 		"hostlisttag.4.name": "أخرى",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "قوائم حظر أخرى."
 	},
 	{
-		"hostlisttag.3.name": "",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.name": "إقليمي",
+		"hostlisttag.3.description": "القوائم التي تركز على الإعلانات الإقليمية وخوادم التتبع."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "منع الإعلانات باللغة النرويجية",
+		"hostlisttag.100.description": "مُصمم خصيصًا لمنع الإعلانات أو أي محتوى آخر غير مرغوب فيه باللغة النرويجية."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "حظر الإعلانات الخاصة باللغة البولندية",
+		"hostlisttag.101.description": "مُصمم خصيصًا لمنع الإعلانات أو أي محتوى آخر غير مرغوب فيه باللغة البولندية."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "حظر الإعلانات المخصصة للغة الكورية",
+		"hostlisttag.102.description": "مُصمم خصيصًا لمنع الإعلانات أو أي محتوى آخر غير مرغوب فيه باللغة الكورية."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "منع الإعلانات الخاصة باللغة الفيتنامية",
+		"hostlisttag.103.description": "مُصمم خصيصًا لمنع الإعلانات أو أي محتوى آخر غير مرغوب فيه باللغة الفيتنامية."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "منع الإعلانات باللغة السويدية",
+		"hostlisttag.104.description": "تم تصميمه خصيصًا لحظر الإعلانات على صفحات الويب باللغة السويدية."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "منع الإعلانات الخاصة باللغة الإيطالية",
+		"hostlisttag.105.description": "مُصمم خصيصًا لمنع الإعلانات أو أي محتوى آخر غير مرغوب فيه باللغة الايطالية."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "منع الإعلانات الخاصة باللغة الايرانية",
+		"hostlisttag.106.description": "مُصمم خصيصًا لمنع الإعلانات أو أي محتوى آخر غير مرغوب فيه باللغة الايرانية."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "منع الإعلانات الخاصة باللغة المقدونية",
+		"hostlisttag.107.description": "مُصمم خصيصًا لمنع الإعلانات أو أي محتوى آخر غير مرغوب فيه باللغة المقدونية."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "منع الإعلانات الخاصة باللغة الصينية",
+		"hostlisttag.108.description": "مُصمم خصيصًا لمنع الإعلانات أو أي محتوى آخر غير مرغوب فيه باللغة الصينية."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "حظر الإعلانات الخاصة باللغة الإندونيسية",
+		"hostlisttag.109.description": "مُصمم خصيصًا لمنع الإعلانات أو أي محتوى آخر غير مرغوب فيه باللغة الاندونيسية."
 	},
 	{
 		"hostlisttag.2.name": "الامان",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "القوائم المصممة خصيصًا لحظر المجالات الخبيثة والتصيد الاحتيالي والخداع."
 	}
 ]
