--- a/locales/de/filters.json
+++ b/locales/de/filters.json
@@ -29,7 +29,7 @@
 	},
 	{
 		"hostlist.7.name": "Perflyst und Dandelion Sprouts Smart-TV-Sperrliste",
-		"hostlist.7.description": ""
+		"hostlist.7.description": "Dies ist eine Sperrliste zum Verhindern der Übermittlung von Metadaten durch Smart-TVs an deren Hersteller, mitunter mit dem zusätzlichen Vorteil, dass Schnittstellenwerbung für Apps und Filmdienste unterbunden wird."
 	},
 	{
 		"hostlist.13.name": "NOR: Dandelion Sprouts Nordische Filter",
@@ -65,7 +65,7 @@
 	},
 	{
 		"hostlist.21.name": "CHN: Anti-AD",
-		"hostlist.21.description": ""
+		"hostlist.21.description": "Wir sind bestrebt, die Werbefilterliste mit der höchsten Trefferquote in der chinesischen Region zu sein, um ein präzises Sperren von Werbung und den Schutz der Privatsphäre zu erreichen."
 	},
 	{
 		"hostlist.22.name": "IDN: ABPindo",
@@ -76,7 +76,7 @@
 		"hostlist.10.description": "Sperrliste zum Schutz vor nicht vertrauenswürdigen Websites."
 	},
 	{
-		"hostlist.11.name": "Online Malicious URL Blocklist (Anti-Malware/-Spyware)",
+		"hostlist.11.name": "Online Malicious URL Blocklist",
 		"hostlist.11.description": "Sperrliste von bösartigen Websites, die Malware verbreiten, basiert auf dem Datenbank-Dump von Abuse.ch URLhaus."
 	},
 	{
