--- a/locales/fr/filters.json
+++ b/locales/fr/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Filtre composé de plusieurs filtres ( Filtre AdGuard Basique, Filtre Réseaux sociaux, Filtre Anti-espionnage, Filtre Publicités Mobiles, EasyList et EasyPrivacy) et simplifié exprés pour maximiser sa compatibilité avec le niveau de blocage du DNS."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "Liste de blocage AdAway Default",
+		"hostlist.2.description": "AdAway est un bloqueur de publicités open source pour Android qui utilise le fichier hosts."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Blocage avec le serveur publicitaire et les noms d’hôte du serveur de pistage."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "La liste de Dan Pollock",
+		"hostlist.4.description": "Bloque certains pièges contextuels, empêche le pistage des utilisateurs et bloque la plupart des publicités."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD Blocklist Basic",
+		"hostlist.5.description": "Bloque les publicités/pisteurs et donne la priorité aux fonctionnalités de blocage."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Règles d’espionnage de l’hôte",
+		"hostlist.23.description": "Bloquer l’espionnage et le pistage sous Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Liste de blocage pour console de jeu de Dandelion Sprout",
+		"hostlist.6.description": "Tout comme il existe maintenant des listes pour AdGuard Home et Pi-hole afin de bloquer les publicités sur les téléviseurs intelligents, voici une tentative de ma part de faire de même pour les consoles de jeux vidéo avec AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Listes de blocage de Perflyst et Dandelion Sprout pour téléviseurs intelligents",
+		"hostlist.7.description": "Ceci est une liste de blocage pour empêcher les téléviseurs intelligents à envoyer des métadonnées, avec parfois l’avantage supplémentaire de bloquer les publicités dans l’interface des applications et des services de films."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR : Filtres nordiques de Dandelion Sprout",
+		"hostlist.13.description": "Filtres nordiques de Dandelion Sprout (pour AdGuard Home et pour le filtrage DNS d’AdGuard pour Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL : Filtres polonais pour Pi-hole",
+		"hostlist.14.description": "Filtres polonais pour Pi-hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR : YousList",
+		"hostlist.15.description": "Filtre de blocage pour les publicités, principalement sur les sites coréens."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM : Liste ABPVN",
+		"hostlist.16.description": "Liste de filtres des publicités pour le vietnamien."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE : Fichiers hosts suédois de Frellwit",
+		"hostlist.17.description": "Vise à se débarrasser des publicités, du pistage, des escroqueries et des logiciels malveillants sur (principalement) les sites Web suédois."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA : Filtri-DNS",
+		"hostlist.18.description": "Fichier hosts provisoire pour les sites italiens créés à partir d’Easylist Italy et des fichiers ADB X."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN : Domaines iraniens indésirables",
+		"hostlist.19.description": "Liste des hôtes indésirables catégorisés."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD : Liste de blocage macédonien pour Pi-hole",
+		"hostlist.20.description": "Ceci est une liste pour bloquer les domaines indésirables qui diffusent des publicités sur les sites Web macédoniens."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN : anti-AD",
+		"hostlist.21.description": "Engagé à être la liste de filtrage des publicités avec le taux de réussite le plus élevé de la région chinoise, en offrant un blocage précis des publicités et une protection de la confidentialité."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN : ABPindo",
+		"hostlist.22.description": "ABPindo est un filtre supplémentaire pour compléter EasyList afin de bloquer les publicités gênantes sur les sites en langue indonésienne et malaisienne."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Liste de blocage des arnaques par DurableNapkin",
+		"hostlist.10.description": "Une liste de blocage pour protéger les utilisateurs contre les sites peu fiables."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Une liste de blocage de sites Web malicieux utilisés pour la distribution de logiciels malveillants, basée sur un vidage de la base de données d’Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Liste Anti-Malware de Dandelion Sprout",
+		"hostlist.12.description": "Liste Anti-Malware de Dandelion Sprout (pour AdGuard Home et pour le filtrage DNS d'AdGuard pour Android/Windows)."
 	},
 	{
 		"hostlist.8.name": "Liste de filtres NoCoin",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Ceci est une liste de blocage des publicités pour bloquer le minage de crypto-monnaies basé sur un navigateur."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "La grande liste des sites Web de logiciels malveillants piratés",
+		"hostlist.9.description": "Une liste de sites web piratés avec des logiciels malveillants, des ransomwares ou des chevaux de Troie."
 	}
 ]
