--- a/locales/fr/tags.json
+++ b/locales/fr/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Listes qui bloquent le pistage et la publicité sur la plupart des appareils."
 	},
 	{
 		"hostlisttag.4.name": "Autre",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Autres listes de blocage."
 	},
 	{
 		"hostlisttag.3.name": "Régional",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Listes axées sur les annonces régionales et les serveurs de pistage."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Blocage spécifique à la langue norvégienne",
+		"hostlisttag.100.description": "Conçu spécifiquement pour bloquer les publicités ou tout autre contenu indésirable en langue norvégienne."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Blocage spécifique à la langue polonaise",
+		"hostlisttag.101.description": "Conçu spécifiquement pour bloquer les publicités ou tout autre contenu indésirable en langue polonaise."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Blocage spécifique à la langue coréenne",
+		"hostlisttag.102.description": "Conçu spécifiquement pour bloquer les publicités ou tout autre contenu indésirable en langue coréenne."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Blocage spécifique à la langue vietnamienne",
+		"hostlisttag.103.description": "Conçu spécifiquement pour bloquer les publicités ou tout autre contenu indésirable en langue vietnamienne."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Blocage spécifique à la langue suédoise",
+		"hostlisttag.104.description": "Conçu spécifiquement pour bloquer les publicités ou tout autre contenu indésirable en langue suédoise."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Blocage spécifique à la langue italienne",
+		"hostlisttag.105.description": "Conçu spécifiquement pour bloquer les publicités ou tout autre contenu indésirable en langue italienne."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Blocage spécifique à la langue iranienne",
+		"hostlisttag.106.description": "Conçu spécifiquement pour bloquer les publicités ou tout autre contenu indésirable en langue iranienne."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Blocage spécifique à la langue macédonienne",
+		"hostlisttag.107.description": "Conçu spécifiquement pour bloquer les publicités ou tout autre contenu indésirable en langue macédonienne."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Blocage spécifique à la langue chinoise",
+		"hostlisttag.108.description": "Conçu spécifiquement pour bloquer les publicités ou tout autre contenu indésirable en chinois."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Blocage spécifique à la langue indonésienne",
+		"hostlisttag.109.description": "Conçu spécifiquement pour bloquer les publicités ou tout autre contenu indésirable en langue indonésienne."
 	},
 	{
 		"hostlisttag.2.name": "Sécurité",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Listes conçues spécifiquement pour bloquer les domaines malveillants, d’hameçonnage et d’escroquerie."
 	}
 ]
