--- a/locales/he/filters.json
+++ b/locales/he/filters.json
@@ -1,7 +1,7 @@
 [
 	{
-		"hostlist.1.name": "מסנן שמות תחום מופשטים של AdGuard",
-		"hostlist.1.description": "מסנן שמשומש על ידי אדגגארד DNS. בעיקרון, משלב כמה מסננים (מסנן אנגלית, מסנן חברתי, מסנן ריגול, מסנן מודעות להתקנים ניידים, EasyList ו EasyPrivacy) טרנספורמצית DNS לסינון טוב יותר"
+		"hostlist.1.name": "מסנן AdGuard DNS",
+		"hostlist.1.description": "מסנן שמורכב מכמה מסננים אחרים (מסנן הבסיס של AdGuard, מסנן מדיה חברתית, מסנן הגנה מפני מעקב, מסנן פרסומות לניידים, EasyList ו־EasyPrivacy) ומופשט במיוחד כדי להיות תואם עם חסימת פרסומות ברמת DNS."
 	},
 	{
 		"hostlist.2.name": "",
@@ -32,7 +32,7 @@
 		"hostlist.7.description": ""
 	},
 	{
-		"hostlist.13.name": "",
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
 		"hostlist.13.description": ""
 	},
 	{
@@ -40,11 +40,11 @@
 		"hostlist.14.description": ""
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "מסנן חסימה עבור פרסומות, בעיקר באתרים קוריאניים."
 	},
 	{
-		"hostlist.16.name": "",
+		"hostlist.16.name": "VNM: ABPVN List",
 		"hostlist.16.description": ""
 	},
 	{
@@ -52,7 +52,7 @@
 		"hostlist.17.description": ""
 	},
 	{
-		"hostlist.18.name": "",
+		"hostlist.18.name": "ITA: Filtri-DNS",
 		"hostlist.18.description": ""
 	},
 	{
@@ -64,11 +64,11 @@
 		"hostlist.20.description": ""
 	},
 	{
-		"hostlist.21.name": "",
+		"hostlist.21.name": "CHN: anti-AD",
 		"hostlist.21.description": ""
 	},
 	{
-		"hostlist.22.name": "",
+		"hostlist.22.name": "IDN: ABPindo",
 		"hostlist.22.description": ""
 	},
 	{
@@ -85,7 +85,7 @@
 	},
 	{
 		"hostlist.8.name": "רשימת מסננים של NoCoin",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "רשימת חסימת פרסומות כדי לחסום כרייה מבוססת דפדפן של מטבע מבוזר."
 	},
 	{
 		"hostlist.9.name": "",
