--- a/locales/he/tags.json
+++ b/locales/he/tags.json
@@ -1,7 +1,7 @@
 [
 	{
 		"hostlisttag.1.name": "כללי",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "רשימות שחוסמות מעקב ופרסום ברוב המכשירים."
 	},
 	{
 		"hostlisttag.4.name": "אחר",
@@ -9,7 +9,7 @@
 	},
 	{
 		"hostlisttag.3.name": "אזורי",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "רשימות שמתמקדות בפרסומות אזוריות ובשרתי מעקב."
 	},
 	{
 		"hostlisttag.100.name": "",
@@ -53,6 +53,6 @@
 	},
 	{
 		"hostlisttag.2.name": "אבטחה",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "רשימות שמתוכננות במיוחד לחסום תחומים זדוניים, תחומי דיוג ותחומי הונאה."
 	}
 ]
