--- a/locales/hr/filters.json
+++ b/locales/hr/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Filtar je sastavljen od nekoliko drugih filtara (AdGuard Osnovni filtar, Filtar za društvene mreže, Filtar zaštite od praćenja, Filtar za mobilne oglase, EasyList i EasyPrivacy) i uz topojednostavljen da bi bio bolje kompatibilan sa blokiranjem oglasa na DNS razini."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "Zadani popis blokiranih oglasa",
+		"hostlist.2.description": "AdAway je blokator oglasa otvorenog koda za Android pomoću datoteke hosts."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Blokiranje pomoću oglasnog poslužitelja i nazivi glavnog računala poslužitelja za praćenje."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Popis Dana Pollocka",
+		"hostlist.4.description": "Blokira određene skočne zamke, sprječava praćenje korisnika, blokira većinu oglašavanja."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "Osnovni popis blokiranih OISD-a",
+		"hostlist.5.description": "Blokira oglase/programe za praćenje i daje prednost funkcionalnosti u odnosu na blokiranje."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Domaćini špijunskih pravila",
+		"hostlist.23.description": "Blokirajte špijuniranje i praćenje u sustavu Windows."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
+		"hostlist.6.description": "Kao što sada postoje popisi za AdGuard Home i Pi-hole za blokiranje oglasa na pametnim televizorima, evo pokušaja od mene da učinim isto za konzole za videoigre s AdGuard Home."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
+		"hostlist.7.description": "Ovo je popis blokiranja za blokiranje pametnih televizora koji šalju metapodatke kod kuće, ponekad s dodatnom koristi od blokiranja oglasa sučelja za aplikacije i filmske usluge."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
+		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (za AdGuard Home i za AdGuard za FILTRIRANJE DNS-a za Android/Windows)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Polish filters for Pi hole",
+		"hostlist.14.description": "Poljski filtri za Pi hole."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Blokirajte filtar za oglase, uglavnom na korejskim web-lokacijama."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN List",
+		"hostlist.16.description": "Adblock popis filtara za vijetnamski."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
+		"hostlist.17.description": "Ima za cilj riješiti se oglasa, praćenja, prijevara i lošeg softvera na (uglavnom) švedskim web stranicama."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Uvjetna datoteka domaćina za talijanska web-mjesta stvorena iz datoteka EasyList Italy i ADB X."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Unwanted Iranian domains",
+		"hostlist.19.description": "Popis kategoriziranih nepoželjnih domaćina."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
+		"hostlist.20.description": "Ovo je popis za blokiranje neželjenih domena koje poslužuju oglase na makedonskim web stranicama."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Obvezao se da će biti popis za filtriranje oglasa s najvišom stopom učitavanja u kineskoj regiji, postižući precizno blokiranje oglasa i zaštitu privatnosti."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "ABPindo je dodatni filtar koji nadopunjuje EasyList za blokiranje dosadnih oglasa na web lokacijama na indonezijskom i malezijskom jeziku."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
+		"hostlist.10.description": "Popis blokova za zaštitu korisnika od nepouzdanih web-mjesta."
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Popis zlonamjernih web stranica koje se koriste za distribuciju zlonamjernog softvera, na temelju izvatka baze podataka Abuse.ch URLhaus."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
+		"hostlist.12.description": "Dandelion Sprout's Anti-Malware List (za AdGuard Home i za AdGuard za FILTRIRANJE DNS-a za Android / Windows)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Ovo je adblock popis za blokiranje kripto rudarstva temeljenog na pregledniku."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
+		"hostlist.9.description": "Popis web stranica koje su hakirane zlonamjernim softverom, ransomwareom ili trojancima."
 	}
 ]
