--- a/locales/hr/tags.json
+++ b/locales/hr/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "Općenito",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Popisi koji blokiraju pratitelje i oglase na većini uređaja."
 	},
 	{
 		"hostlisttag.4.name": "Ostalo",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "Ostali popisi nedopuštenih."
 	},
 	{
 		"hostlisttag.3.name": "Regionalno",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Popisi koji se fokusiraju na regionalne oglase i poslužitelje za praćenje."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Blokiranje specifično za norveški jezik",
+		"hostlisttag.100.description": "Dizajniran posebno za blokiranje oglasa ili drugog neželjenog sadržaja na norveškom jeziku."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Blokiranje specifično za poljski jezik",
+		"hostlisttag.101.description": "Dizajniran posebno za blokiranje oglasa ili drugog neželjenog sadržaja na poljskom jeziku."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Blokiranje specifično za korejski jezik",
+		"hostlisttag.102.description": "Dizajniran posebno za blokiranje oglasa ili drugog neželjenog sadržaja na korejskom jeziku."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Blokiranje specifično za vijetnamski jezik",
+		"hostlisttag.103.description": "Dizajniran posebno za blokiranje oglasa ili drugog neželjenog sadržaja na vijetnamskom jeziku."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Blokiranje specifično za švedski jezik",
+		"hostlisttag.104.description": "Dizajniran posebno za blokiranje oglasa ili drugog neželjenog sadržaja na švedskom jeziku."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Blokiranje specifično za talijanski jezik",
+		"hostlisttag.105.description": "Dizajniran posebno za blokiranje oglasa ili drugog neželjenog sadržaja na talijanskom jeziku."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Blokiranje specifično za iranski jezik",
+		"hostlisttag.106.description": "Dizajniran posebno za blokiranje oglasa ili drugog neželjenog sadržaja na iranskom jeziku."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Blokiranje specifično za makedonski jezik",
+		"hostlisttag.107.description": "Dizajniran posebno za blokiranje oglasa ili drugog neželjenog sadržaja na makedonskom jeziku."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Blokiranje specifično za kineski jezik",
+		"hostlisttag.108.description": "Dizajniran posebno za blokiranje oglasa ili drugog neželjenog sadržaja na kineskom jeziku."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Blokiranje specifično za indonezijski jezik",
+		"hostlisttag.109.description": "Dizajniran posebno za blokiranje oglasa ili drugog neželjenog sadržaja na indonezijskom jeziku."
 	},
 	{
 		"hostlisttag.2.name": "Sigurnost",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Popisi posebno dizajnirani za blokiranje zlonamjernih domena, domena za krađu identiteta i prijevare."
 	}
 ]
