--- a/locales/hu/filters.json
+++ b/locales/hu/filters.json
@@ -4,91 +4,91 @@
 		"hostlist.1.description": "Szűrő, amely több más szűrő (AdGuard Alap szűrő, Közösségi Média szűrő, Követés Elleni szűrő, Mobil Reklám szűrő, EasyList és EasyPrivacy) egyesítéséből áll, kifejezetten leegyszerűsítve, hogy minél inkább kompatibilis legyen a DNS szintű hirdetésblokkolással."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway alapértelmezett tiltólista",
+		"hostlist.2.description": "Az AdAway egy nyílt forráskódú hirdetésblokkoló Androidhoz, amely a hosts fájlt használja."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "Hirdetési kiszolgáló és nyomkövető kiszolgáló hostnévvel történő blokkolás."
 	},
 	{
-		"hostlist.4.name": "",
-		"hostlist.4.description": ""
+		"hostlist.4.name": "Dan Pollock listája",
+		"hostlist.4.description": "Blokkol bizonyos felugró ablakcsapdákat, megakadályozza a felhasználó nyomon követését, blokkolja a legtöbb reklámot."
 	},
 	{
-		"hostlist.5.name": "",
-		"hostlist.5.description": ""
+		"hostlist.5.name": "OISD alap tiltólista",
+		"hostlist.5.description": "Blokkolja a hirdetéseket/nyomkövetőket, és a funkcionalitást helyezi előtérbe a blokkolással szemben."
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Kémkedés elleni hoszt szabályok",
+		"hostlist.23.description": "Kémkedés és nyomkövetés tiltása Windows rendszerekben."
 	},
 	{
-		"hostlist.6.name": "",
-		"hostlist.6.description": ""
+		"hostlist.6.name": "Dandelion Sprout játékkonzolokhoz készült hirdetésblokkoló listája",
+		"hostlist.6.description": "Hasonlóan az AdGuard Home és a Pi-hole listákhoz, amelyek blokkolják a hirdetéseket az okostévéken, itt egy próbálkozás, hogy ugyanez lehetővé váljon az AdGuard Home szolgáltatással rendelkező videojáték konzoloknál."
 	},
 	{
-		"hostlist.7.name": "",
-		"hostlist.7.description": ""
+		"hostlist.7.name": "Perflyst és a Dandelion Sprout Smart-TV tiltólistája",
+		"hostlist.7.description": "Ez egy olyan tiltólista, amely megakadályozza, hogy az okostévék metaadatokat \"küldjenek haza\", néha azzal az előnnyel, hogy blokkolja az alkalmazások és filmszolgáltatások felületein megjelenő hirdetéseket is."
 	},
 	{
-		"hostlist.13.name": "",
-		"hostlist.13.description": ""
+		"hostlist.13.name": "NOR: Dandelion Sprout északi szűrője",
+		"hostlist.13.description": "Dandelion Sprout északi szűrője (AdGuard Home-hoz, valamint Androidos és Windowsos AdGuard verziók DNS szűréséhez)."
 	},
 	{
-		"hostlist.14.name": "",
-		"hostlist.14.description": ""
+		"hostlist.14.name": "POL: Lengyel szűrők a Pi hole-hoz",
+		"hostlist.14.description": "Lengyel szűrők a Pi hole-hoz."
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "Tiltólista hirdetések ellen, főleg a koreai oldalakon."
 	},
 	{
-		"hostlist.16.name": "",
-		"hostlist.16.description": ""
+		"hostlist.16.name": "VNM: ABPVN Lista",
+		"hostlist.16.description": "Adblock szűrőlista vietnami nyelvhez."
 	},
 	{
-		"hostlist.17.name": "",
-		"hostlist.17.description": ""
+		"hostlist.17.name": "SWE: Frellwit svéd hosztfájlja",
+		"hostlist.17.description": "Célja, hogy megszabaduljon a hirdetésektől, nyomkövetéstől, átverésektől és a rosszindulatú szoftverektől (többnyire) a svéd webhelyeken."
 	},
 	{
-		"hostlist.18.name": "",
-		"hostlist.18.description": ""
+		"hostlist.18.name": "ITA: Filtri-DNS",
+		"hostlist.18.description": "Az EasyList Italy és az ADB X Files alapján létrehozott ideiglenes hosts fájl az olasz oldalakhoz."
 	},
 	{
-		"hostlist.19.name": "",
-		"hostlist.19.description": ""
+		"hostlist.19.name": "IRN: Nem kívánt iráni domainek",
+		"hostlist.19.description": "Kategorizálatlan, nemkívánatos hosztnevek."
 	},
 	{
-		"hostlist.20.name": "",
-		"hostlist.20.description": ""
+		"hostlist.20.name": "MKD: Macedón Pi-hole tiltólista",
+		"hostlist.20.description": "Ez a lista olyan nem kívánatos domainek blokkolására szolgál, amelyek hirdetéseket jelenítenek meg a macedón weboldalakon."
 	},
 	{
-		"hostlist.21.name": "",
-		"hostlist.21.description": ""
+		"hostlist.21.name": "CHN: anti-AD",
+		"hostlist.21.description": "Elkötelezett az iránt, hogy a kínai régió legmagasabb találati arányú hirdetésszűrő listája legyen, pontos hirdetésblokkolást és adatvédelmet biztosítva."
 	},
 	{
-		"hostlist.22.name": "",
-		"hostlist.22.description": ""
+		"hostlist.22.name": "IDN: ABPindo",
+		"hostlist.22.description": "Az ABPindo egy kiegészítő szűrő az EasyList kiegészítéseként, amely blokkolja az indonéz és maláj nyelvű oldalakon megjelenő zavaró hirdetéseket."
 	},
 	{
-		"hostlist.10.name": "",
-		"hostlist.10.description": ""
+		"hostlist.10.name": "DurableNapkin átverések elleni listája",
+		"hostlist.10.description": "Egy tiltólista, amely megvédi a felhasználókat a megbízhatatlan webhelyekkel szemben."
 	},
 	{
 		"hostlist.11.name": "Rosszindulatú URL-ek tiltólistája",
-		"hostlist.11.description": ""
+		"hostlist.11.description": "Kártékony programok terjesztésére használt rosszindulatú webhelyek tiltólistája, amely az Abuse.ch URLhaus adatbázis kivonatán alapul."
 	},
 	{
-		"hostlist.12.name": "",
-		"hostlist.12.description": ""
+		"hostlist.12.name": "Dandelion Sprout kártevők elleni listája",
+		"hostlist.12.description": "Dandelion Sprout kártevők (malware) elleni szűrője (AdGuard Home-hoz, valamint Androidos és Windowsos AdGuard verziók DNS szűréséhez)."
 	},
 	{
 		"hostlist.8.name": "NoCoin szűrőlista",
-		"hostlist.8.description": ""
+		"hostlist.8.description": "Ez egy adblock lista a böngészőalapú kriptobányászat blokkolására."
 	},
 	{
-		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.name": "A feltört malware weboldalak nagy listája",
+		"hostlist.9.description": "A rosszindulatú szoftverekkel, zsarolóprogramokkal vagy trójaiakkal feltört webhelyek listája."
 	}
 ]
