--- a/locales/it/filters.json
+++ b/locales/it/filters.json
@@ -53,7 +53,7 @@
 	},
 	{
 		"hostlist.18.name": "ITA: Filtri DNS",
-		"hostlist.18.description": "File host provvisorio creato da Easylist Italy e ADB X File per siti italiani."
+		"hostlist.18.description": "File host provvisorio creato da Easylist Italia e ADB X File per siti italiani."
 	},
 	{
 		"hostlist.19.name": "IRN: Domini iraniani indesiderati",
@@ -76,7 +76,7 @@
 		"hostlist.10.description": "Una lista nera per proteggere gli utenti da siti inaffidabili."
 	},
 	{
-		"hostlist.11.name": "Lista nera di URL Online Malevoli",
+		"hostlist.11.name": "Lista nera di URL Malevoli Online",
 		"hostlist.11.description": "Una lista nera per siti web dannosi utilizzati per la distribuzione di malware, basato sul dump del database URLhaus di Abuse.ch."
 	},
 	{
