--- a/locales/ja/filters.json
+++ b/locales/ja/filters.json
@@ -4,7 +4,7 @@
 		"hostlist.1.description": "AdGuardベースフィルタ、SNS用フィルタ、追跡防止フィルタ、モバイル広告フィルタ、EasyList、EasyPrivacyから構成され、DNSレベルの広告ブロックとの互換性が向上するように簡素化されたフィルタです。"
 	},
 	{
-		"hostlist.2.name": "",
+		"hostlist.2.name": "AdAway Default Blocklist",
 		"hostlist.2.description": ""
 	},
 	{
@@ -12,23 +12,23 @@
 		"hostlist.3.description": ""
 	},
 	{
-		"hostlist.4.name": "",
+		"hostlist.4.name": "Dan Pollock's List",
 		"hostlist.4.description": ""
 	},
 	{
-		"hostlist.5.name": "",
+		"hostlist.5.name": "OISD Blocklist Basic",
 		"hostlist.5.description": ""
 	},
 	{
-		"hostlist.23.name": "",
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
 		"hostlist.23.description": ""
 	},
 	{
-		"hostlist.6.name": "",
+		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
 		"hostlist.6.description": ""
 	},
 	{
-		"hostlist.7.name": "",
+		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
 		"hostlist.7.description": ""
 	},
 	{
@@ -72,7 +72,7 @@
 		"hostlist.22.description": ""
 	},
 	{
-		"hostlist.10.name": "",
+		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
 		"hostlist.10.description": ""
 	},
 	{
@@ -80,7 +80,7 @@
 		"hostlist.11.description": ""
 	},
 	{
-		"hostlist.12.name": "",
+		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
 		"hostlist.12.description": ""
 	},
 	{
@@ -88,7 +88,7 @@
 		"hostlist.8.description": ""
 	},
 	{
-		"hostlist.9.name": "",
+		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
 		"hostlist.9.description": ""
 	}
 ]
