--- a/locales/ko/filters.json
+++ b/locales/ko/filters.json
@@ -4,31 +4,31 @@
 		"hostlist.1.description": "여러 필터 (AdGuard 베이스 필터, 소셜 미디어 필터, 추적 보호 필터, 모바일 광고 필터, EasyList, EasyPrivacy)를 포함하며, 더 나은 DNS 레벨의 필터링을 위해 간소화 된 필터입니다."
 	},
 	{
-		"hostlist.2.name": "",
-		"hostlist.2.description": ""
+		"hostlist.2.name": "AdAway 기본 차단 목록",
+		"hostlist.2.description": "AdAway는 호스트 파일을 사용하는 안드로이드용 오픈 소스 광고 차단기입니다."
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": ""
+		"hostlist.3.description": "광고 서버와 추적 서버의 호스트 이름을 차단합니다."
 	},
 	{
-		"hostlist.4.name": "",
+		"hostlist.4.name": "Dan Pollock의 목록",
 		"hostlist.4.description": ""
 	},
 	{
-		"hostlist.5.name": "",
+		"hostlist.5.name": "OISD 기본 차단 목록",
 		"hostlist.5.description": ""
 	},
 	{
-		"hostlist.23.name": "",
-		"hostlist.23.description": ""
+		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
+		"hostlist.23.description": "Windows에서 감시 및 추적을 차단합니다."
 	},
 	{
-		"hostlist.6.name": "",
+		"hostlist.6.name": "Dandelion Sprout의 게임 콘솔 광고 차단 목록",
 		"hostlist.6.description": ""
 	},
 	{
-		"hostlist.7.name": "",
+		"hostlist.7.name": "Perflyst 및 Dandelion Sprout의 스마트 TV 차단 목록",
 		"hostlist.7.description": ""
 	},
 	{
@@ -40,8 +40,8 @@
 		"hostlist.14.description": ""
 	},
 	{
-		"hostlist.15.name": "",
-		"hostlist.15.description": ""
+		"hostlist.15.name": "KOR: YousList",
+		"hostlist.15.description": "주로 한국 사이트 광고를 중점으로 한 차단 필터"
 	},
 	{
 		"hostlist.16.name": "",
@@ -76,7 +76,7 @@
 		"hostlist.10.description": ""
 	},
 	{
-		"hostlist.11.name": "온라인 악성 URL 차단 목록",
+		"hostlist.11.name": "Online Malicious URL Blocklist",
 		"hostlist.11.description": ""
 	},
 	{
@@ -89,6 +89,6 @@
 	},
 	{
 		"hostlist.9.name": "",
-		"hostlist.9.description": ""
+		"hostlist.9.description": "악성코드, 랜섬웨어 또는 트로이 목마로 해킹되는 웹 사이트 목록입니다."
 	}
 ]
