--- a/locales/no/filters.json
+++ b/locales/no/filters.json
@@ -8,7 +8,7 @@
 		"hostlist.2.description": ""
 	},
 	{
-		"hostlist.3.name": "Peter Lowes blokkeringsliste",
+		"hostlist.3.name": "",
 		"hostlist.3.description": ""
 	},
 	{
@@ -84,7 +84,7 @@
 		"hostlist.12.description": ""
 	},
 	{
-		"hostlist.8.name": "NoCoin-filterliste",
+		"hostlist.8.name": "",
 		"hostlist.8.description": ""
 	},
 	{
