--- a/locales/ru/filters.json
+++ b/locales/ru/filters.json
@@ -1,6 +1,6 @@
 [
 	{
-		"hostlist.1.name": "DNS фильтр",
+		"hostlist.1.name": "Фильтр AdGuard DNS",
 		"hostlist.1.description": "Фильтр, составленный из нескольких фильтров (Базовый фильтр AdGuard, Фильтр социальных сетей, Фильтр счетчиков и систем аналитики, Фильтр мобильной рекламы, EasyList и EasyPrivacy), и специально упрощенный, чтобы быть лучше совместимым с блокировкой рекламы на уровне DNS."
 	},
 	{
@@ -33,7 +33,7 @@
 	},
 	{
 		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
-		"hostlist.13.description": ""
+		"hostlist.13.description": "Скандинавские фильтры от Dandelion Sprout (для AdGuard Home и DNS-фильтрации AdGuard для Android/Windows)."
 	},
 	{
 		"hostlist.14.name": "POL: Polish filters for Pi hole",
@@ -69,7 +69,7 @@
 	},
 	{
 		"hostlist.22.name": "IDN: ABPindo",
-		"hostlist.22.description": ""
+		"hostlist.22.description": "ABPindo — это дополнительный фильтр к EasyList для блокировки надоедливой рекламы сайтов на индонезийском и малайзийском языках."
 	},
 	{
 		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
@@ -81,7 +81,7 @@
 	},
 	{
 		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
-		"hostlist.12.description": ""
+		"hostlist.12.description": "Фильтр Anti-Malware от Dandelion Sprout (для AdGuard Home и DNS-фильтрации AdGuard для Android/Windows)."
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
