--- a/locales/sv/filters.json
+++ b/locales/sv/filters.json
@@ -1,6 +1,6 @@
 [
 	{
-		"hostlist.1.name": "AdGuards förenklade domännamnsfilter",
+		"hostlist.1.name": "AdGuard DNS-filter",
 		"hostlist.1.description": "Filter som kombinerar flera andra filter (AdGuards grundfilter, filter för sociala medier , spårningsfilter, filter för mobilannonser, EasyList och EasyPrivacy) och förenklade,  specifikt för förbättrad kompatibilitet med annonsblockering på DNS-nivå."
 	},
 	{
