--- a/locales/sv/tags.json
+++ b/locales/sv/tags.json
@@ -8,7 +8,7 @@
 		"hostlisttag.4.description": ""
 	},
 	{
-		"hostlisttag.3.name": "",
+		"hostlisttag.3.name": "Regional",
 		"hostlisttag.3.description": ""
 	},
 	{
