--- a/locales/tr/filters.json
+++ b/locales/tr/filters.json
@@ -25,7 +25,7 @@
 	},
 	{
 		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
-		"hostlist.6.description": ""
+		"hostlist.6.description": "AdGuard Home ve Pi-hole için akıllı TV'lerde reklamları engelleme listeleri bulunsa da AdGuard Home ile video oyunu konsolları için aynı şeyi yapıyor."
 	},
 	{
 		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
@@ -61,7 +61,7 @@
 	},
 	{
 		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
-		"hostlist.20.description": "Makedonca internet sitelerinde reklam sunan istenmeyen alan adlarını engelleyen liste."
+		"hostlist.20.description": "Makedonca sitelerde reklam sunan istenmeyen alan adlarını engelleyen liste."
 	},
 	{
 		"hostlist.21.name": "CHN: anti-AD",
@@ -77,7 +77,7 @@
 	},
 	{
 		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": "Abuse.ch URLhaus'un veri tabanına dayalı olarak, kötü amaçlı yazılım dağıtımı için kullanılan kötü amaçlı internet sitelerinin engel listesi."
+		"hostlist.11.description": "Abuse.ch URLhaus'un veri tabanına dayalı olarak, kötü amaçlı yazılım dağıtımı için kullanılan kötü amaçlı sitelerin engel listesi."
 	},
 	{
 		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
@@ -89,6 +89,6 @@
 	},
 	{
 		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
-		"hostlist.9.description": "Kötü amaçlı yazılım, fidye yazılımı veya truva atı ile saldırıya uğrayan internet sitelerinin listesi."
+		"hostlist.9.description": "Kötü amaçlı yazılım, fidye yazılımı veya truva atı ile saldırıya uğrayan sitelerin listesi."
 	}
 ]
