--- a/locales/uk/filters.json
+++ b/locales/uk/filters.json
@@ -1,7 +1,7 @@
 [
 	{
 		"hostlist.1.name": "DNS-фільтр AdGuard",
-		"hostlist.1.description": "Фільтр складається з декількох інших фільтрів (Основного фільтра AdGuard, фільтра соціальних мереж, фільтра захисту від стеження, фільтра мобільної реклами, EasyList та EasyPrivacy) і спрощений таким чином, щоб вдосконалити сумісність з блокуванням реклами на рівні DNS."
+		"hostlist.1.description": "Фільтр, який складається з декількох інших фільтрів (Основного, Віджетів соцмереж, Захисту від стеження, Мобільної реклами, EasyList і EasyPrivacy) і певним чином спрощений задля кращої сумісності з блокуванням реклами на рівні DNS."
 	},
 	{
 		"hostlist.2.name": "",
