--- a/locales/zh/filters.json
+++ b/locales/zh/filters.json
@@ -76,7 +76,7 @@
 		"hostlist.10.description": "防止用户访问不可靠网站的拦截列表。"
 	},
 	{
-		"hostlist.11.name": "在线恶意URL拦截列表",
+		"hostlist.11.name": "Online Malicious URL Blocklist",
 		"hostlist.11.description": "基于 Abuse.ch URLhaus 的数据库转储的恶意网站拦截列表。"
 	},
 	{
