--- a/locales/hu/tags.json
+++ b/locales/hu/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "Általános",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "Olyan listák, amelyek blokkolják a nyomkövetést és a hirdetéseket a legtöbb eszközön."
 	},
 	{
 		"hostlisttag.4.name": "Egyéb",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "További tiltólisták."
 	},
 	{
 		"hostlisttag.3.name": "Regionális",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "Olyan listák, amelyek a regionális hirdetések, valamint a nyomkövető szerverek ellen vannak kifejlesztve."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "Norvég nyelvspecifikus blokkolás",
+		"hostlisttag.100.description": "Kifejezetten a norvég nyelvű hirdetések és egyéb nem kívánt tartalmak blokkolására tervezték."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "Lengyel nyelvspecifikus blokkolás",
+		"hostlisttag.101.description": "Kifejezetten a lengyel nyelvű hirdetések és egyéb nem kívánt tartalmak blokkolására tervezték."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "Koreai nyelvspecifikus blokkolás",
+		"hostlisttag.102.description": "Kifejezetten a koreai nyelvű hirdetések és egyéb nem kívánt tartalmak blokkolására tervezték."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "Vietnami nyelvspecifikus blokkolás",
+		"hostlisttag.103.description": "Kifejezetten a vietnámi nyelvű hirdetések és egyéb nem kívánt tartalmak blokkolására tervezték."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "Svéd nyelvspecifikus blokkolás",
+		"hostlisttag.104.description": "Kifejezetten a svéd nyelvű hirdetések és egyéb nem kívánt tartalmak blokkolására tervezték."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "Olasz nyelvspecifikus blokkolás",
+		"hostlisttag.105.description": "Kifejezetten az olasz nyelvű hirdetések és egyéb nem kívánt tartalmak blokkolására tervezték."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "Iráni nyelvspecifikus blokkolás",
+		"hostlisttag.106.description": "Kifejezetten az iráni nyelvű hirdetések és egyéb nem kívánt tartalmak blokkolására tervezték."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "Macedón nyelvspecifikus blokkolás",
+		"hostlisttag.107.description": "Kifejezetten a hirdetések vagy más nem kívánt tartalmak blokkolására tervezték macedón nyelven."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "Kínai nyelvspecifikus blokkolás",
+		"hostlisttag.108.description": "Kifejezetten a kínai nyelvű hirdetések és egyéb nem kívánt tartalmak blokkolására tervezték."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "Indonéz nyelvspecifikus blokkolás",
+		"hostlisttag.109.description": "Kifejezetten a hirdetések vagy más nem kívánt tartalmak blokkolására tervezték indonéz nyelven."
 	},
 	{
 		"hostlisttag.2.name": "Biztonság",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "Kifejezetten a rosszindulatú, adathalász és átveréses domainek blokkolására tervezett listák."
 	}
 ]
