--- a/locales/ko/tags.json
+++ b/locales/ko/tags.json
@@ -1,58 +1,58 @@
 [
 	{
 		"hostlisttag.1.name": "General",
-		"hostlisttag.1.description": ""
+		"hostlisttag.1.description": "대부분의 기기에서 추적 및 광고를 차단하는 목록."
 	},
 	{
 		"hostlisttag.4.name": "기타",
-		"hostlisttag.4.description": ""
+		"hostlisttag.4.description": "기타 차단 목록."
 	},
 	{
 		"hostlisttag.3.name": "지역 목록",
-		"hostlisttag.3.description": ""
+		"hostlisttag.3.description": "지역 광고 및 추적 서버에 중점을 둔 목록."
 	},
 	{
-		"hostlisttag.100.name": "",
-		"hostlisttag.100.description": ""
+		"hostlisttag.100.name": "노르웨이어 특화 차단",
+		"hostlisttag.100.description": "노르웨이어 광고나 원치 않는 콘텐츠를 차단하도록 특별히 설계되었습니다."
 	},
 	{
-		"hostlisttag.101.name": "",
-		"hostlisttag.101.description": ""
+		"hostlisttag.101.name": "폴란드어 특화 차단",
+		"hostlisttag.101.description": "폴란드어 광고나 원하지 않는 콘텐츠를 차단하도록 특별히 설계되었습니다."
 	},
 	{
-		"hostlisttag.102.name": "",
-		"hostlisttag.102.description": ""
+		"hostlisttag.102.name": "한국어 특화 차단",
+		"hostlisttag.102.description": "한국어 광고나 원하지 않는 콘텐츠를 차단하도록 특별히 설계되었습니다."
 	},
 	{
-		"hostlisttag.103.name": "",
-		"hostlisttag.103.description": ""
+		"hostlisttag.103.name": "베트남어 특화 차단",
+		"hostlisttag.103.description": "베트남어 광고나 원하지 않는 콘텐츠를 차단하도록 특별히 설계되었습니다."
 	},
 	{
-		"hostlisttag.104.name": "",
-		"hostlisttag.104.description": ""
+		"hostlisttag.104.name": "스웨덴어 특화 차단",
+		"hostlisttag.104.description": "스웨덴어 광고나 원하지 않는 콘텐츠를 차단하도록 특별히 설계되었습니다."
 	},
 	{
-		"hostlisttag.105.name": "",
-		"hostlisttag.105.description": ""
+		"hostlisttag.105.name": "이탈리아어 특화 차단",
+		"hostlisttag.105.description": "이탈리아어 광고나 원하지 않는 콘텐츠를 차단하도록 특별히 설계되었습니다."
 	},
 	{
-		"hostlisttag.106.name": "",
-		"hostlisttag.106.description": ""
+		"hostlisttag.106.name": "이란어 특화 차단",
+		"hostlisttag.106.description": "이란어 광고나 원하지 않는 콘텐츠를 차단하도록 특별히 설계되었습니다."
 	},
 	{
-		"hostlisttag.107.name": "",
-		"hostlisttag.107.description": ""
+		"hostlisttag.107.name": "마케도니아어 특화 차단",
+		"hostlisttag.107.description": "마케도니아어 광고나 원하지 않는 콘텐츠를 차단하도록 특별히 설계되었습니다."
 	},
 	{
-		"hostlisttag.108.name": "",
-		"hostlisttag.108.description": ""
+		"hostlisttag.108.name": "중국어 특화 차단",
+		"hostlisttag.108.description": "중국어 광고나 원하지 않는 콘텐츠를 차단하도록 특별히 설계되었습니다."
 	},
 	{
-		"hostlisttag.109.name": "",
-		"hostlisttag.109.description": ""
+		"hostlisttag.109.name": "인도네시아어 특화 차단",
+		"hostlisttag.109.description": "인도네시아어 광고나 원하지 않는 콘텐츠를 차단하도록 특별히 설계되었습니다."
 	},
 	{
 		"hostlisttag.2.name": "멀웨어, 피싱 차단",
-		"hostlisttag.2.description": ""
+		"hostlisttag.2.description": "악의적인 피싱 및 사기 도메인을 차단하도록 특별히 설계된 목록입니다."
 	}
 ]
