--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -1,39 +1,39 @@
 [
 	{
 		"hostlist.1.name": "AdGuard DNS filter",
-		"hostlist.1.description": "Filter composed of several other filters (AdGuard Base filter, Social Media filter, Tracking Protection filter, Mobile Ads filter, EasyList and EasyPrivacy) and simplified specifically to be better compatible with DNS-level ad blocking."
+		"hostlist.1.description": "List composed of several filters (AdGuard Base filter, Social Media filter, Tracking Protection filter, Mobile Ads filter, EasyList and EasyPrivacy) and simplified specifically to be better compatible with DNS-level ad blocking"
 	},
 	{
 		"hostlist.2.name": "AdAway Default Blocklist",
-		"hostlist.2.description": "AdAway is an open source ad blocker for Android using the hosts file."
+		"hostlist.2.description": "Open-source ad blocker for Android using the hosts file"
 	},
 	{
 		"hostlist.3.name": "Peter Lowe's Blocklist",
-		"hostlist.3.description": "Blocking with ad server and tracking server hostnames."
+		"hostlist.3.description": "Blocklist with hostnames of ad and tracking servers"
 	},
 	{
 		"hostlist.4.name": "Dan Pollock's List",
-		"hostlist.4.description": "Blocks certain pop-up traps, prevents user tracking, blocks most advertising."
+		"hostlist.4.description": "List for blocking ads and preventing user tracking"
 	},
 	{
 		"hostlist.5.name": "OISD Blocklist Basic",
-		"hostlist.5.description": "Blocks ads/trackers and prioritizes functionality over blocking."
+		"hostlist.5.description": "List for blocking ads and trackers. Prioritizes functionality over blocking."
 	},
 	{
 		"hostlist.23.name": "WindowsSpyBlocker - Hosts spy rules",
-		"hostlist.23.description": "Block spying and tracking on Windows."
+		"hostlist.23.description": "List for blocking spying and tracking on Windows"
 	},
 	{
 		"hostlist.6.name": "Dandelion Sprout's Game Console Adblock List",
-		"hostlist.6.description": "Much like there's now lists for AdGuard Home and Pi-hole to block ads on smart-TVs, here's an attempt from me at doing the same for videogame consoles with AdGuard Home."
+		"hostlist.6.description": "List for blocking ads on videogame consoles that use AdGuard Home"
 	},
 	{
 		"hostlist.7.name": "Perflyst and Dandelion Sprout's Smart-TV Blocklist",
-		"hostlist.7.description": "This is a blocklist to block smart-TVs sending metadata back home, sometimes with the added benefit of blocking interface ads for apps and movie services."
+		"hostlist.7.description": "List for preventing smart TVs from sending metadata to the vendor, and for blocking ads in apps and movie services"
 	},
 	{
 		"hostlist.13.name": "NOR: Dandelion Sprouts nordiske filtre",
-		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (for AdGuard Home, and for AdGuard for Android/Windows' DNS filtering)."
+		"hostlist.13.description": "Dandelion Sprout's Nordic Filters (DNS filtering in AdGuard Home, AdGuard for Android, and AdGuard for Windows)"
 	},
 	{
 		"hostlist.14.name": "POL: Polish filters for Pi hole",
@@ -41,78 +41,82 @@
 	},
 	{
 		"hostlist.15.name": "KOR: YousList",
-		"hostlist.15.description": "Block filter for advertisements, mainly on Korean sites."
+		"hostlist.15.description": "List for blocking ads mainly on Korean websites"
 	},
 	{
 		"hostlist.16.name": "VNM: ABPVN List",
-		"hostlist.16.description": "Adblock filter list for Vietnamese."
+		"hostlist.16.description": "List for blocking ads on Vietnamese websites"
 	},
 	{
 		"hostlist.17.name": "SWE: Frellwit's Swedish Hosts File",
-		"hostlist.17.description": "Aims to get rid of ads, tracking, scams & badware on (mostly) Swedish websites."
+		"hostlist.17.description": "List for blocking ads, tracking, scams & malware mainly on Swedish websites"
 	},
 	{
 		"hostlist.18.name": "ITA: Filtri-DNS",
-		"hostlist.18.description": "Tentative hosts file for Italian sites created from Easylist Italy and ADB X Files."
+		"hostlist.18.description": "List for blocking ads on Italian websites based on Easylist Italy and ADB X Files"
 	},
 	{
 		"hostlist.19.name": "IRN: Unwanted Iranian domains",
-		"hostlist.19.description": "List of categorized undesired hosts."
+		"hostlist.19.description": "List of categorized undesired hosts"
 	},
 	{
 		"hostlist.20.name": "MKD: Macedonian Pi-hole Blocklist",
-		"hostlist.20.description": "This is a list to block unwanted domains that serve ads on Macedonian websites."
+		"hostlist.20.description": "List for blocking ads on Macedonian websites"
 	},
 	{
 		"hostlist.21.name": "CHN: anti-AD",
-		"hostlist.21.description": "Committed to being the highest hit rate ad filtering list in the Chinese region, achieving precise ad blocking and privacy protection."
+		"hostlist.21.description": "List for blocking ads in the Chinese region. Aims at privacy protection."
 	},
 	{
 		"hostlist.22.name": "IDN: ABPindo",
-		"hostlist.22.description": "ABPindo is an additional filter to complement EasyList to block annoying ads on Indonesian and Malaysian language sites."
+		"hostlist.22.description": "Filter complementary to EasyList for blocking ads on Indonesian and Malaysian websites"
 	},
 	{
 		"hostlist.10.name": "Scam Blocklist by DurableNapkin",
-		"hostlist.10.description": "A blocklist to protect users against untrustworthy sites."
+		"hostlist.10.description": "List for blocking untrustworthy websites"
 	},
 	{
-		"hostlist.11.name": "Online Malicious URL Blocklist",
-		"hostlist.11.description": "A blocklist of malicious websites that are being used for malware distribution, based on the Database dump of Abuse.ch URLhaus."
+		"hostlist.11.name": "Malicious URL Blocklist (URLHaus)",
+		"hostlist.11.description": "Blocklist of malicious websites based on the Database dump of Abuse.ch URLhaus"
 	},
 	{
 		"hostlist.12.name": "Dandelion Sprout's Anti-Malware List",
-		"hostlist.12.description": "Dandelion Sprout's Anti-Malware List (for AdGuard Home, and for AdGuard for Android/Windows' DNS filtering)."
+		"hostlist.12.description": "Dandelion Sprout's Anti-Malware List (DNS filtering in AdGuard Home, AdGuard for Android, and AdGuard for Windows)"
 	},
 	{
 		"hostlist.8.name": "NoCoin Filter List",
-		"hostlist.8.description": "This is an adblock list to block browser-based crypto mining."
+		"hostlist.8.description": "List for blocking browser-based crypto mining"
 	},
 	{
 		"hostlist.9.name": "The Big List of Hacked Malware Web Sites",
-		"hostlist.9.description": "A list of web sites that are hacked with malware, ransomware or trojans."
+		"hostlist.9.description": "List of websites that are hacked with malware, ransomware or trojans"
 	},
 	{
 		"hostlist.24.name": "1Hosts (Lite)",
-		"hostlist.24.description": "Safeguard your device(s) against pesky ads, trackers, and malware."
+		"hostlist.24.description": "List for blocking pesky ads, trackers, and malware"
 	},
 	{
 		"hostlist.25.name": "KOR: List-KR DNS",
-		"hostlist.25.description": "A DNS version of List-KR, a filter for websites in Korean language."
+		"hostlist.25.description": "A DNS version of List-KR, a filter for websites in the Korean language"
 	},
 	{
 		"hostlist.26.name": "TUR: turk-adlist",
-		"hostlist.26.description": "Ad servers list to block ads and annoying elements on Turkish sites."
+		"hostlist.26.description": "List for blocking ads and annoying elements on Turkish websites"
 	},
 	{
 		"hostlist.27.name": "OISD Blocklist Full",
-		"hostlist.27.description": "Blocks ads/trackers and prioritizes functionality over blocking. Compared to the basic version, the chances of a false-positive are higher."
+		"hostlist.27.description": "List for blocking ads and trackers. Prioritizes functionality over blocking. Chances of incorrect blocking are higher than in the basic version of OISD Blocklist."
 	},
 	{
 		"hostlist.28.name": "Energized Spark",
-		"hostlist.28.description": "A list of domains that serve ads, tracking scripts and malware from multiple reputable sources."
+		"hostlist.28.description": "List for blocking ads, tracking scripts and malware"
 	},
 	{
 		"hostlist.29.name": "CHN: AdRules DNS List",
-		"hostlist.29.description": "This is a list of advertising filters based on the Chinese area, achieving a relatively accurate advertising shield."
+		"hostlist.29.description": "List for blocking ads in the Chinese region"
+	},
+	{
+		"hostlist.30.name": "Phishing URL Blocklist (PhishTank and OpenPhish)",
+		"hostlist.30.description": "Blocklist of phishing websites, based on PhishTank and OpenPhish lists"
 	}
 ]
